proj_2/mdb/BaliParser.java
/* Generated By:JavaCC: Do not edit this line. BaliParser.java */
package mdb ;

public class BaliParser implements BaliParserConstants {

    private static SqlLang parseRoot = null ;

    public static SqlLang getStartRoot () {
        return parseRoot ;
    }

    public static SqlLang getStartRoot (BaliParser parser)
    throws ParseException {
        try {
            parseRoot = parser.SqlLang () ;
            parser.requireEOF () ;
            return parseRoot ;
        } catch (TokenMgrError error) {
            ParseException e = new ParseException
            ("token error occurred") ;
            e.initCause (error) ;
            throw e ;
        }
    }

    // Wraps an optional node around an AstNode:
    //
    static AstOptNode opt (AstNode node) {
        return new AstOptNode () . setParms (node) ;
    }

    // Wraps an optional node around an AstToken:
    //
    static AstOptToken opt (AstToken token) {
        return new AstOptToken () . setParms (token) ;
    }

    // Forces an end-of-file check in the tokenStream:
    //
    public void requireEOF () throws ParseException {
        try {
            jj_consume_token (BaliParserConstants.EOF) ;
        } catch (TokenMgrError error) {
            ParseException e = new ParseException ("EOF error") ;
            e.initCause (error) ;
            throw e ;
        }
    }

    // Converts a JavaCC Token to a Bali AstToken:
    //
    static AstToken t2at (Token tok) {

        // Special case -- if token is optional:
        //
        if (tok == null)
            return (null) ;

        StringBuffer buffer = new StringBuffer () ;
        Token special = tok.specialToken;
        while (special != null) {
            buffer.insert (0, special.toString()) ;
            special = special.specialToken ;
        }
        String white = buffer.toString () ;

        return new AstToken().setParms (white, tok.image, tok.endLine) ;
    }

//-----------------------------------//
// JAVACODE blocks from grammar:
//-----------------------------------//

// No JAVACODE blocks in Bali grammar.

//-----------------------------------//
// Productions from Bali grammar:
//-----------------------------------//
  static final public SqlLang SqlLang() throws ParseException {
    Ddl_stmt dd0=null ;
    Dml_stmt dm0=null ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE:
    case INDEX:
    case SEMI:
    case SHOW:
      dd0 = Ddl_stmt();
     {if (true) return (SqlLang) dd0 ;}
      break;
    case ABORT:
    case CLOSE:
    case COMMIT:
    case DELETE:
    case EXIT:
    case INSERT:
    case OPEN:
    case SCRIPT:
    case SELECT:
    case UPDATE:
      dm0 = Dml_stmt();
     {if (true) return (SqlLang) dm0 ;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Abort Abort() throws ParseException {
    Token to1=null, to0=null ;
    to0 = jj_consume_token(ABORT);
    to1 = jj_consume_token(SEMI);
     {if (true) return new AbortCmd().setParms (t2at(to0), t2at(to1)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Assign Assign() throws ParseException {
    Field_name fi0=null ;
    Literal li0=null ;
    Token to0=null ;
    fi0 = Field_name();
    to0 = jj_consume_token(EQ);
    li0 = Literal();
     {if (true) return new Asgn().setParms (fi0, t2at(to0), li0) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Assign_list Assign_list() throws ParseException {
    Assign_list list = new Assign_list () ;
    Assign as0=null ;
    Token to0=null ;
    as0 = Assign();
     list.add (new Assign_listElem().setParms (as0)) ;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      to0 = jj_consume_token(COMMA);
      as0 = Assign();
         list.add (new Assign_listElem().setParms (t2at(to0), as0)) ;
    }
     {if (true) return list ;}
    throw new Error("Missing return statement in function");
  }

  static final public Clause Clause() throws ParseException {
    Field_spec fi1=null, fi0=null ;
    Literal li0=null ;
    Rel re0=null ;
    Token to0=null ;
    if (jj_2_1(2147483647)) {
      fi0 = Field_spec();
      to0 = jj_consume_token(EQ);
      fi1 = Field_spec();
     {if (true) return new JoinClause().setParms (fi0, t2at(to0), fi1) ;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        fi0 = Field_spec();
        re0 = Rel();
        li0 = Literal();
     {if (true) return new SimpleClause().setParms (fi0, re0, li0) ;}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Close Close() throws ParseException {
    Token to1=null, to0=null ;
    to0 = jj_consume_token(CLOSE);
    to1 = jj_consume_token(SEMI);
     {if (true) return new CloseCmd().setParms (t2at(to0), t2at(to1)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Commit Commit() throws ParseException {
    Token to1=null, to0=null ;
    to0 = jj_consume_token(COMMIT);
    to1 = jj_consume_token(SEMI);
     {if (true) return new CommitCmd().setParms (t2at(to0), t2at(to1)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Ddl_stmt Ddl_stmt() throws ParseException {
    Decl_ind deSs0=null ;
    Decl_rel de0=null ;
    Show sh0=null ;
    Token to0=null ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE:
      de0 = Decl_rel();
     {if (true) return (Ddl_stmt) de0 ;}
      break;
    case INDEX:
      deSs0 = Decl_ind();
     {if (true) return (Ddl_stmt) deSs0 ;}
      break;
    case SHOW:
      sh0 = Show();
     {if (true) return (Ddl_stmt) sh0 ;}
      break;
    case SEMI:
      to0 = jj_consume_token(SEMI);
     {if (true) return new EmptyStmt().setParms (t2at(to0)) ;}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Decl_ind Decl_ind() throws ParseException {
    Rel_dot_field re0=null ;
    Token to1=null, to0=null ;
    to0 = jj_consume_token(INDEX);
    re0 = Rel_dot_field();
    to1 = jj_consume_token(SEMI);
     {if (true) return new IndxDecl().setParms (t2at(to0), re0, t2at(to1)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Decl_rel Decl_rel() throws ParseException {
    Fld_decl_list fl0=null ;
    Rel_name re0=null ;
    Token to4=null, to3=null, to2=null, to1=null, to0=null ;
    to0 = jj_consume_token(CREATE);
    to1 = jj_consume_token(TABLE);
    re0 = Rel_name();
    to2 = jj_consume_token(LP);
    fl0 = Fld_decl_list();
    to3 = jj_consume_token(RP);
    to4 = jj_consume_token(SEMI);
     {if (true) return new RelDecl().setParms
    (t2at(to0), t2at(to1), re0, t2at(to2), fl0, t2at(to3), t2at(to4)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Delete Delete() throws ParseException {
    One_rel_pred on0=null ;
    Rel_name re0=null ;
    Token to2=null, to1=null, to0=null ;
    to0 = jj_consume_token(DELETE);
    re0 = Rel_name();
    to1 = jj_consume_token(WHERE);
    on0 = One_rel_pred();
    to2 = jj_consume_token(SEMI);
     {if (true) return new DeleteCmd().setParms
    (t2at(to0), re0, t2at(to1), on0, t2at(to2)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Dml_stmt Dml_stmt() throws ParseException {
    Abort ab0=null ;
    Close cl0=null ;
    Commit co0=null ;
    Delete de0=null ;
    ExitMDB ex0=null ;
    Insert in0=null ;
    Open op0=null ;
    Script sc0=null ;
    Select se0=null ;
    Update up0=null ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ABORT:
      ab0 = Abort();
     {if (true) return (Dml_stmt) ab0 ;}
      break;
    case CLOSE:
      cl0 = Close();
     {if (true) return (Dml_stmt) cl0 ;}
      break;
    case COMMIT:
      co0 = Commit();
     {if (true) return (Dml_stmt) co0 ;}
      break;
    case DELETE:
      de0 = Delete();
     {if (true) return (Dml_stmt) de0 ;}
      break;
    case EXIT:
      ex0 = ExitMDB();
     {if (true) return (Dml_stmt) ex0 ;}
      break;
    case INSERT:
      in0 = Insert();
     {if (true) return (Dml_stmt) in0 ;}
      break;
    case OPEN:
      op0 = Open();
     {if (true) return (Dml_stmt) op0 ;}
      break;
    case SCRIPT:
      sc0 = Script();
     {if (true) return (Dml_stmt) sc0 ;}
      break;
    case SELECT:
      se0 = Select();
     {if (true) return (Dml_stmt) se0 ;}
      break;
    case UPDATE:
      up0 = Update();
     {if (true) return (Dml_stmt) up0 ;}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ExitMDB ExitMDB() throws ParseException {
    Token to1=null, to0=null ;
    to0 = jj_consume_token(EXIT);
    to1 = jj_consume_token(SEMI);
     {if (true) return new ExitCmd().setParms (t2at(to0), t2at(to1)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Field_decl Field_decl() throws ParseException {
    Field_name fi0=null ;
    Field_type fiSs0=null ;
    fi0 = Field_name();
    fiSs0 = Field_type();
     {if (true) return new FieldDecl().setParms (fi0, fiSs0) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Field_name Field_name() throws ParseException {
    Token to0=null ;
    to0 = jj_consume_token(IDENTIFIER);
     {if (true) return new FieldName().setParms (t2at(to0)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Field_spec Field_spec() throws ParseException {
    Field_name fi0=null ;
    Rel_dot_field re0=null ;
    if (jj_2_2(2147483647)) {
      re0 = Rel_dot_field();
     {if (true) return (Field_spec) re0 ;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        fi0 = Field_name();
     {if (true) return (Field_spec) fi0 ;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Field_type Field_type() throws ParseException {
    Token to0=null ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      to0 = jj_consume_token(INTEGER);
     {if (true) return new IntField().setParms (t2at(to0)) ;}
      break;
    case STRING:
      to0 = jj_consume_token(STRING);
     {if (true) return new StrField().setParms (t2at(to0)) ;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Fld_decl_list Fld_decl_list() throws ParseException {
    Fld_decl_list list = new Fld_decl_list () ;
    Field_decl fi0=null ;
    Token to0=null ;
    fi0 = Field_decl();
     list.add (new Fld_decl_listElem().setParms (fi0)) ;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
      to0 = jj_consume_token(COMMA);
      fi0 = Field_decl();
         list.add (new Fld_decl_listElem().setParms (t2at(to0), fi0)) ;
    }
     {if (true) return list ;}
    throw new Error("Missing return statement in function");
  }

  static final public Insert Insert() throws ParseException {
    Literal_list li0=null ;
    Rel_name re0=null ;
    Token to5=null, to4=null, to3=null, to2=null, to1=null, to0=null ;
    to0 = jj_consume_token(INSERT);
    to1 = jj_consume_token(INTO);
    re0 = Rel_name();
    to2 = jj_consume_token(VALUES);
    to3 = jj_consume_token(LP);
    li0 = Literal_list();
    to4 = jj_consume_token(RP);
    to5 = jj_consume_token(SEMI);
     {if (true) return new InsertCmd().setParms
    (t2at(to0), t2at(to1), re0, t2at(to2), t2at(to3), li0, t2at(to4), t2at(to5)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Literal Literal() throws ParseException {
    Token to0=null ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_LITERAL:
      to0 = jj_consume_token(STRING_LITERAL);
     {if (true) return new StrLit().setParms (t2at(to0)) ;}
      break;
    case INTEGER_LITERAL:
      to0 = jj_consume_token(INTEGER_LITERAL);
     {if (true) return new IntLit().setParms (t2at(to0)) ;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Literal_list Literal_list() throws ParseException {
    Literal_list list = new Literal_list () ;
    Literal li0=null ;
    Token to0=null ;
    li0 = Literal();
     list.add (new Literal_listElem().setParms (li0)) ;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      to0 = jj_consume_token(COMMA);
      li0 = Literal();
         list.add (new Literal_listElem().setParms (t2at(to0), li0)) ;
    }
     {if (true) return list ;}
    throw new Error("Missing return statement in function");
  }

  static final public One_rel_clause One_rel_clause() throws ParseException {
    Field_name fi0=null ;
    Literal li0=null ;
    Rel re0=null ;
    fi0 = Field_name();
    re0 = Rel();
    li0 = Literal();
     {if (true) return new OneRelClause().setParms (fi0, re0, li0) ;}
    throw new Error("Missing return statement in function");
  }

  static final public One_rel_pred One_rel_pred() throws ParseException {
    One_rel_pred list = new One_rel_pred () ;
    One_rel_clause on0=null ;
    Token to0=null ;
    on0 = One_rel_clause();
     list.add (new One_rel_predElem().setParms (on0)) ;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      to0 = jj_consume_token(AND);
      on0 = One_rel_clause();
         list.add (new One_rel_predElem().setParms (t2at(to0), on0)) ;
    }
     {if (true) return list ;}
    throw new Error("Missing return statement in function");
  }

  static final public Open Open() throws ParseException {
    Token to2=null, to1=null, to0=null ;
    to0 = jj_consume_token(OPEN);
    to1 = jj_consume_token(STRING_LITERAL);
    to2 = jj_consume_token(SEMI);
     {if (true) return new OpenCmd().setParms (t2at(to0), t2at(to1), t2at(to2)) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Pred Pred() throws ParseException {
    Pred list = new Pred () ;
    Clause cl0=null ;
    Token to0=null ;
    cl0 = Clause();
     list.add (new PredElem().setParms (cl0)) ;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
